Blog fixes + image resizer

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "bootstrap-icons": "^1.11.3",
-        "quill": "^2.0.2"
+        "quill": "^2.0.2",
+        "quill-image-resize-module-react": "^3.0.0"
     }
 }
