--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,4 +20,4 @@ jobs:
 
     - name: Deploy to VPS
       run: |
-        ssh -o StrictHostKeyChecking=no jaydon-ssh@193.122.147.91 'cd htdocs/www.jaydonlynch.dev/ && git pull && ./deploy_script.sh'
+        ssh -o StrictHostKeyChecking=no jaydon-ssh@193.122.147.91 'cd htdocs/www.jaydonlynch.dev/ && git stash && git pull && git stash pop && ./deploy_script.sh'
